# pyocr

./: .gitignore  LICENSE  README.md  pyproject.toml
src/pyocr/: __init__.py  pyocr.py
src/pyocr/tools/: pretraitement.py
src/shinigami_no_me/: __init__.py  ocr.py  ocr_model.py
src/shinigami_no_me/tools/: __init__.py  segmentation.py
src/tarzan/: __init__.py  ocr.py  ocr_model.py
src/tarzan/tools/: segmentation.py
