[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tarzan"
version = "0.0.1"
authors = [
    {name="Fitahiana Nomeniavo Joe", email="24nomeniavo@gmail.com"}
]
description = 'Optical character recognition'
requires-python = ">=3.9"
dependencies = ['tensorflow', 'opencv-python', 'imutils']

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tools.setuptools.packages.find]
where = ["src"]
namespaces = false
